<resources>
    <string name="cp_app_name">CPLibrary</string>
    <string name="cp_empty_tip">暂无数据</string>
    <string name="cp_no_network_tip">没有网络</string>
    <string name="cp_error_tip">服务器开小差了..</string>
    <string name="cp_time_out_tip">加载超时</string>
    <string name="cp_btn_login">登录</string>
    <string name="cp_loading_tip">加载中...</string>
    <string name="cp_retry_tip">轻触屏幕重试</string>
    <string name="cp_no_login_tip">你还没有登录</string>

    <!--阴历+日历-->
    <string-array name="cp_npv_lunar_year_without_measure_hint">
        <item>二零一六</item>
    </string-array>
    <string-array name="cp_npv_lunar_month_without_measure_hint">
        <item>十一</item>
    </string-array>
    <string-array name="cp_npv_lunar_day_with_measure_hint">
        <item>初一</item>
    </string-array>
    <string name="cp_year">年</string>
    <string name="cp_month">月</string>
    <string name="cp_day">日</string>
    <string name="cp_hour">时</string>

    <!--录制视频上传 -->
    <string name="cp_dont_have_camera_error">对不起,没有发现摄像头,请检查</string>
    <string name="cp_dont_have_front_camera">当前设备没有前置摄像头</string>
    <string name="cp_only_have_one_camera">对不起,您只有一个摄像头,无法切换</string>
    <string name="cp_video_captured">视频已成功录制</string>
    <string name="cp_camera_init_fail">摄像头初始化失败</string>
    <string name="cp_hanging_flashLight_mode">切换闪光灯模式失败</string>
    <string name="cp_fail_when_camera_try_autofocus">对焦失败:%1$s</string>
</resources>
